--- a/cv.tex
+++ b/cv.tex
@@ -1,7 +1,7 @@
 %-------------------------
 % Resume in Latex
-% Author : Sourabh Bajaj
-% Website: https://github.com/sb2nov/resume
+% Author : Nicolás Tallar
+% Website: https://github.com/ntallar/cv
 % License : MIT
 %------------------------
 
@@ -12,10 +12,10 @@
 \usepackage{titlesec}
 \usepackage{marvosym}
 \usepackage[usenames,dvipsnames]{color}
-\usepackage{verbatim}
 \usepackage{enumitem}
-\usepackage[pdftex]{hyperref}
+\usepackage{hyperref}
 \usepackage{fancyhdr}
+\usepackage{fontawesome}
 
 
 \pagestyle{fancy}
@@ -23,6 +23,7 @@
 \fancyfoot{}
 \renewcommand{\headrulewidth}{0pt}
 \renewcommand{\footrulewidth}{0pt}
+\renewcommand{\labelitemii}{$\circ$}
 
 % Adjust margins
 \addtolength{\oddsidemargin}{-0.375in}
@@ -36,59 +37,31 @@
 \raggedbottom
 \raggedright
 \setlength{\tabcolsep}{0in}
+\setlength{\footskip}{5pt}
 
 % Sections formatting
 \titleformat{\section}{
   \vspace{-4pt}\scshape\raggedright\large
 }{}{0em}{}[\color{black}\titlerule \vspace{-5pt}]
 
-%-------------------------
-% Custom commands
-\newcommand{\resumeItem}[2]{
-  \item\small{
-    \textbf{#1}{: #2 \vspace{-2pt}}
-  }
-}
-
-\newcommand{\resumeSubheading}[4]{
-  \vspace{-1pt}\item
-    \begin{tabular*}{0.97\textwidth}{l@{\extracolsep{\fill}}r}
-      \textbf{#1} & #2 \\
-      \textit{\small#3} & \textit{\small #4} \\
-    \end{tabular*}\vspace{-5pt}
-}
-
-\newcommand{\resumeSubItem}[2]{\resumeItem{#1}{#2}\vspace{-4pt}}
-
-\renewcommand{\labelitemii}{$\circ$}
-
-\newcommand{\resumeSubHeadingListStart}{\begin{itemize}[leftmargin=*]}
-\newcommand{\resumeSubHeadingListEnd}{\end{itemize}}
-\newcommand{\resumeItemListStart}{\begin{itemize}}
-\newcommand{\resumeItemListEnd}{\end{itemize}\vspace{-5pt}}
-
-%-------------------------------------------
-%%%%%%  CV STARTS HERE  %%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\input{resume-commands.tex}
 
 
 \begin{document}
 
 %----------HEADING-----------------
-\begin{tabular*}{\textwidth}{l@{\extracolsep{\fill}}r}
-  \textbf{\href{http://sourabhbajaj.com/}{\Large Sourabh Bajaj}} & Email : \href{mailto:sourabh@sourabhbajaj.com}{mail@website.com}\\
-  \href{http://sourabhbajaj.com/}{http://www.sourabhbajaj.com} & Mobile : +1-123-456-7890 \\
+\begin{tabular*}{\textwidth}{l@{\extracolsep{\fill}}l}
+  \textbf{\Large Nicol\'as Tallar}  & \faEnvelopeSquare \ \href{mailto:nicolastallar@gmail.com}{nicolastallar@gmail.com} \\
+                                    & \faGithub \ \href{https://github.com/ntallar}{https://github.com/ntallar} \\
 \end{tabular*}
 
 
 %-----------EDUCATION-----------------
 \section{Education}
   \resumeSubHeadingListStart
-    \resumeSubheading
-      {Georgia Institute of Technology}{Atlanta, GA}
-      {Master of Science in Computer Science;  GPA: 4.00}{Aug. 2012 -- Dec. 2013}
-    \resumeSubheading
-      {Birla Institute of Technology and Science}{Pilani, India}
-      {Bachelor of Engineering in Electrical and Electronics;  GPA: 3.66 (9.15/10.0)}{Aug. 2008 -- July. 2012}
+    \resumeSubheadingTitleWithoutDesc
+      {Universidad de Buenos Aires}{CABA, Argentina}
+      {BS+Master in Computer Science;  GPA: 9.38}{Jan. 2012 -- sometime in 2023}
   \resumeSubHeadingListEnd
 
 
@@ -96,76 +69,98 @@
 \section{Experience}
   \resumeSubHeadingListStart
 
-    \resumeSubheading
-      {Google}{Mountain View, CA}
-      {Software Engineer}{Oct 2016 - Present}
+    \resumeSubheadingTitle
+      {Globant}{CABA, Argentina}
+      {Tech Leader \& Typescript Dev}{Mar 2023 - now}
+      {Led development of various services for a marketplace application}
       \resumeItemListStart
-        \resumeItem{Tensorflow}
-          {TensorFlow is an open source software library for numerical computation using data flow graphs; primarily used for training deep learning models.}
-        \resumeItem{Apache Beam}
-          {Apache Beam is a unified model for defining both batch and streaming data-parallel processing pipelines, as well as a set of language-specific SDKs for constructing pipelines and runners.}
+        \resumeItemTechStack{Typescript, NestJS, Azure, SQL}
+        \resumeItem{Extensive integration to the Azure ecosystem: Blob Storage (using SAS), Queue Storage, Azure functions}
       \resumeItemListEnd
 
-    \resumeSubheading
-      {Coursera}{Mountain View, CA}
-      {Senior Software Engineer}{Jan 2014 - Oct 2016}
+    \resumeSubheadingSubtitleWithoutDesc
+      {Tech Leader \& Solidity Dev at \href{https://gitlab.com/atixlabs-oss/agua}{Agua project}}{Dec 2022 - Mar 2023}
+      %{Designed Solidity Smart Contracts, integrating with flows implemented on a NodeJS application.}
       \resumeItemListStart
-        \resumeItem{Notifications}
-          {Service for sending email, push and in-app notifications. Involved in features such as delivery time optimization, tracking, queuing and A/B testing. Built an internal app to run batch campaigns for marketing etc.}
-        \resumeItem{Nostos}
-          {Bulk data processing and injection service from Hadoop to Cassandra and provides a thin REST layer on top for serving offline computed data online.}
-        \resumeItem{Workflows}
-          {Dataduct an open source workflow framework to create and manage data pipelines leveraging reusables patterns to expedite developer productivity.}
-        \resumeItem{Data Collection}
-          {Designed the internal survey and crowd sourcing platfowm which allowed for creating various tasks for crowd sourding or embedding surveys across the Coursera platform.}
-        \resumeItem{Dev Environment}
-          {Analytics environment based on docker and AWS, standardized the python and R dependencies. Wrote the core libraries that are shared by all data scientists.}
-        \resumeItem{Data Warehousing}
-          {Setup, schema design and management of Amazon Redshift. Built an internal app for access to the data using a web interface. Dataduct integration for daily ETL injection into Redshift.}
-        \resumeItem{Recommendations}
-          {Core service for all recommendation systems at Coursesa, currently used on the homepage and throughout the content discovery process. Worked on both offline training and online serving.}
-        \resumeItem{Content Discovery}
-          {Improved content discovery by building a new onboarding experience on coursera. Using this to personalize the search and browse experience. Also worked on ranking and indexing improvements.}
-        \resumeItem{Course Dashboards}
-          {Instructor dashboards and learner surveying tools, which helped instructors run their class better by providing data on Assignments and Learner Activity.}
+        \resumeItemTechStack{Solidity, Javascript, Hardhat, OpenZeppelin}
       \resumeItemListEnd
 
-    \resumeSubheading
-      {Lucena Research}{Atlanta, GA}
-      {Data Scientist}{Summer 2012 and 2013}
+    \resumeSubheadingSubtitle
+      {Tech Leader \& Kotlin Dev}{Dec 2021 - Dec 2022}
+      {Led development of part of the microservices for a gaming application: a Kotlin and a Java microservice, both built on the Spring Boot framework.}
       \resumeItemListStart
-        \resumeItem{Portfolio Management}
-          {Created models for portfolio hedging,  portfolio optimization and price forecasting. Also creating a strategy backtesting engine used for simulating and backtesting strategies.}
-        \resumeItem{QuantDesk}
-          {Python backend for a web application used by hedge fund managers for portfolio management.}
+        \resumeItemTechStack{Kotlin (libraries: Arrow), Java, Solidity, Spring Boot, Hardhat, AWS (DynamoDB, S3)}
+        \resumeItem{Market Research of Wallet and NFT products and protocols}
+        \resumeItem{Design \& coordination for the integration of the implemented microservices with the others}
+      \resumeItemListEnd
+
+    \resumeSubheadingTitle
+      {Atix Labs}{CABA, Argentina}
+      {Tech Leader \& Scala Dev at \href{https://github.com/input-output-hk/mantis}{Mantis project}}{Sep 2020 - Jan 2021}
+      {Led modernization of a Ethereum Classic client, a Scala protocol implementation modeled with Akka actors.}
+      \resumeItemListStart
+        \resumeItemTechStack{Scala (libraries: Akka, Cats, Monix), NoSQL (RocksDB)}
+        \resumeItemWithDetails
+          {Design \& implementation of a protocol change to Ethereum Classic}
+          {\href{https://ecips.ethereumclassic.org/ECIPs/ecip-1098}{a proto-treasury system.}}
+      \resumeItemListEnd
+
+    \resumeSubheadingSubtitle
+      {Squad Captain \& Scala Dev}{Sep 2018 - Sep 2020; Jan 2021 - Ago 2021}
+      {Led development of a subteam for a project implementing a new cryptocurrency, through a layered Scala application integrated to Solidity contracts.}
+      \resumeItemListStart
+        \resumeItemTechStack{Scala (libraries: Akka, Cats, Monix), Solidity, NoSQL (RocksDB)}
+        \resumeItem{Strict functional programming}
+        \resumeItemWithDetails
+          {Research-oriented development}
+          {in close communication with a dedicated research team in charge of creating the protocol changes that our team implemented.}
+        \resumeItem{Design \& implementation of the synchronization process between nodes of the cryptocurrency}
+      \resumeItemListEnd
+
+    \resumeSubheadingSubtitle
+      {Haskell Dev at \href{https://github.com/input-output-hk/project-icarus-importer}{Yoroi project}}{Jan 2018 - Sep 2018}
+      {Developed a Haskell integration to the Cardano Blockchain, that exposed events happing on it by exporting them to a SQL database. Helped with the Javascript Backend and Frontend as consumers of the produced database.}
+      \resumeItemListStart
+        \resumeItemTechStack{Haskell, SQL}
+        \resumeItem{Designed integration with Cardano node}
+      \resumeItemListEnd
+
+    \resumeSubheadingSubtitle
+      {Scala Dev at \href{https://github.com/input-output-hk/mantis}{Mantis project}}{Dec 2016 - Jan 2018}
+      {Developed a Ethereum and Ethereum Classic client, a Scala protocol implementation modeled with Akka actors.}
+      \resumeItemListStart
+        \resumeItemTechStack{Scala (Akka actors), NoSQL (LevelDB and RocksDB)}
+        \resumeItemWithDetails
+          {Network Compatible with Ethereum and Ethereum Classic}
+          {basing protocol implementation on the Ethereum paper and other of its implementations.}
+        \resumeItemWithDetails
+          {Open Source project}
+          {with periodic status updates to the community.}
       \resumeItemListEnd
 
   \resumeSubHeadingListEnd
 
 
-%-----------PROJECTS-----------------
-\section{Projects}
-  \resumeSubHeadingListStart
-    \resumeSubItem{QuantSoftware Toolkit}
-      {Open source python library for financial data analysis and machine learning for finance.}
-    \resumeSubItem{Github Visualization}
-      {Data Visualization of Git Log data using D3 to analyze project trends over time.}
-    \resumeSubItem{Recommendation System}
-      {Music and Movie recommender systems using collaborative filtering on public datasets.}
-%     \resumeSubItem{Mac Setup}
-%       {Book that gives step by step instructions on setting up developer environment on Mac OS.}
-  \resumeSubHeadingListEnd
-
-%
 %--------PROGRAMMING SKILLS------------
 \section{Programming Skills}
  \resumeSubHeadingListStart
-   \item{
-     \textbf{Languages}{: Scala, Python, Javascript, C++, SQL, Java}
-     \hfill
-     \textbf{Technologies}{: AWS, Play, React, Kafka, GCE}
-   }
+    \resumeSubItemWithDetails{Languages}
+      {Scala (w/libraries: Akka, Cats, Monix), Kotlin (w/libraries: Arrow), Typescript, Haskell}
+      % Solidity
+    \resumeSubItemWithDetails{Technologies}
+      {Spring Boot, NestJS, NoSQL, SQL, AWS (DynamoDB, S3), Azure (functions, Blob, Queue), Docker}
+      % Hardhat
  \resumeSubHeadingListEnd
+
+
+%-----------PROJECTS-----------------
+\section{Projects \& Courses}
+  \resumeSubHeadingListStart
+    \resumeSubItemWithDetails
+      {IOHK Haskell \& Cryptocurrency Course}
+      {3 month course focused on Haskell development}
+    \resumeSubItem{Thesis on Simulations of Selfish Mining attack on the Bitcoin network}
+  \resumeSubHeadingListEnd
 
 
 %-------------------------------------------
