--- a/cv.tex
+++ b/cv.tex
@@ -61,7 +61,7 @@
   \resumeSubHeadingListStart
     \resumeSubheadingTitleWithoutDesc
       {Universidad de Buenos Aires}{CABA, Argentina}
-      {BS+Master in Computer Science;  GPA: 9.38}{Jan. 2012 -- sometime in 2023}
+      {BS+Master in Computer Science;  GPA: 9.36}{Jan. 2012 -- Ago. 2023}
   \resumeSubHeadingListEnd
 
 
@@ -148,8 +148,8 @@
       {Scala (w/libraries: Akka, Cats, Monix), Kotlin (w/libraries: Arrow), Typescript, Haskell}
       % Solidity
     \resumeSubItemWithDetails{Technologies}
-      {Spring Boot, NestJS, NoSQL, SQL, AWS (DynamoDB, S3), Azure (functions, Blob, Queue), Docker}
-      % Hardhat
+      {Spring Boot, NestJS, NoSQL, SQL, AWS (DynamoDB, S3), Azure (functions, Blob, Queue)}
+      % Hardhat, Docker
  \resumeSubHeadingListEnd
 
 
@@ -159,7 +159,7 @@
     \resumeSubItemWithDetails
       {IOHK Haskell \& Cryptocurrency Course}
       {3 month course focused on Haskell development}
-    \resumeSubItem{Thesis on Simulations of Selfish Mining attack on the Bitcoin network}
+    \resumeSubItem{Thesis on high-scale simulations of Selfish Mining attack on the Bitcoin network}
   \resumeSubHeadingListEnd
 
 
