feat: completed translation to spanish; general minor improvements to the experience content

--- a/cv.tex
+++ b/cv.tex
@@ -77,7 +77,8 @@
       {\marketplacePosDetails}
       \resumeItemListStart
         \resumeItemTechStack{\marketplaceTechStack}
-        \resumeItem{\marketplaceItemi}
+        \resumeItemWithDetails{\marketplaceItemi}{\marketplaceItemiDetails}
+        \resumeItem{\marketplaceItemii}
       \resumeItemListEnd
 
     \resumeSubheadingSubtitleWithoutDesc
@@ -93,7 +94,6 @@
       \resumeItemListStart
         \resumeItemTechStack{\gamingappTechStack}
         \resumeItem{\gamingappItemi}
-        \resumeItem{\gamingappItemii}
       \resumeItemListEnd
 
     \resumeSubheadingTitle
