--- a/dicts/english.tex
+++ b/dicts/english.tex
@@ -10,7 +10,9 @@
 \def \marketplaceDates{Mar 2023 - now}
 \def \marketplacePosDetails{Led development of various services for a marketplace application}
 \def \marketplaceTechStack{Typescript, NestJS, Azure, SQL}
-\def \marketplaceItemi{Extensive integration to the Azure ecosystem: Blob Storage (using SAS), Queue Storage, Azure functions}
+\def \marketplaceItemi{Extensive integration to the Azure ecosystem}
+\def \marketplaceItemiDetails{Blob Storage (using SAS), Queue Storage, Azure functions}
+\def \marketplaceItemii{Design \& coordination for the integration of all services of the application}
 
 \def \aguaPosition{Tech Leader \& Solidity Dev at \href{https://gitlab.com/atixlabs-oss/agua}{Agua project}}
 \def \aguaDates{Dec 2022 - Mar 2023}
@@ -18,10 +20,10 @@
 
 \def \gamingappPosition{Tech Leader \& Kotlin Dev}
 \def \gamingappDates{Dec 2021 - Dec 2022}
-\def \gamingappPosDetails{Led development of part of the microservices for a gaming application: a Kotlin and a Java microservice, both built on the Spring Boot framework.}
-\def \gamingappTechStack{Kotlin (libraries: Arrow), Java, Solidity, Spring Boot, Hardhat, AWS (DynamoDB, S3)}
+\def \gamingappPosDetails{Led development of various microservices for a gaming application: a Kotlin and a Java microservice, both built on the Spring Boot framework.}
+\def \gamingappTechStack{Kotlin (libraries: Arrow), Java, Spring Boot, AWS (DynamoDB, S3)}
+                         % Solidity, Hardhat
 \def \gamingappItemi{Market Research of Wallet and NFT products and protocols}
-\def \gamingappItemii{Design \& coordination for the integration of the implemented microservices with the others}
 
 \def \mantisiiPosition{Tech Leader \& Scala Dev at \href{https://github.com/input-output-hk/mantis}{Mantis project}}
 \def \mantisiiDates{Sep 2020 - Jan 2021}
@@ -43,7 +45,7 @@
 \def \yoroiDates{Jan 2018 - Sep 2018}
 \def \yoroiPosDetails{Developed a Haskell integration to the Cardano Blockchain, that exposed events happing on it by exporting them to a SQL database. Helped with the Javascript Backend and Frontend as consumers of the produced database.}
 \def \yoroiTechStack{Haskell, SQL}
-\def \yoroiItemi{Designed integration with Cardano node}
+\def \yoroiItemi{Designed integration with Cardano network}
 
 \def \mantisiPosition{Scala Dev at \href{https://github.com/input-output-hk/mantis}{Mantis project}}
 \def \mantisiDates{Dec 2016 - Jan 2018}
