--- a/dicts/spanish.tex
+++ b/dicts/spanish.tex
@@ -6,53 +6,55 @@
 % Experience section
 \def \secExperience{Experiencia}
 
-\def \marketplacePosition{Tech Leader \& Dev Typescript}
+\def \marketplacePosition{Tech Leader \& Backend Dev Typescript}
 \def \marketplaceDates{Mar 2023 - actual}
-\def \marketplacePosDetails{Led development of various services for a marketplace application}
+\def \marketplacePosDetails{Lider del desarrollo de varios servicios para una aplicaci\'on de marketplace}
 \def \marketplaceTechStack{Typescript, NestJS, Azure, SQL}
-\def \marketplaceItemi{Integraci\'on extensiva con el ecosistema de Azure: Blob Storage (using SAS), Queue Storage, Azure functions}
+\def \marketplaceItemi{Integraci\'on extensiva con el ecosistema de Azure}
+\def \marketplaceItemiDetails{Blob Storage (usando SAS), Queue Storage, Azure functions}
+\def \marketplaceItemii{Dise\~no \& coordinaci\'on de la integraci\'on entre todos los servicios de la aplicaci\'on}
 
-\def \aguaPosition{Tech Leader \& Dev Solidity en \href{https://gitlab.com/atixlabs-oss/agua}{Proyecto Agua}}
+\def \aguaPosition{Tech Leader \& Dev Solidity en el \href{https://gitlab.com/atixlabs-oss/agua}{proyecto Agua}}
 \def \aguaDates{Dic 2022 - Mar 2023}
 \def \aguaTechStack{Solidity, Javascript, Hardhat, OpenZeppelin}
 
-\def \gamingappPosition{Tech Leader \& Dev Kotlin}
+\def \gamingappPosition{Tech Leader \& Backend Dev Kotlin}
 \def \gamingappDates{Dic 2021 - Dic 2022}
-\def \gamingappPosDetails{Lider\'e el desarrollo de una parte de los microservicios de una aplicaci\'on de gaming: un microservicio en Kotlin y otro en Java, ambos construidos con el framework de Spring Boot.}
-\def \gamingappTechStack{Kotlin (librer\'as: Arrow), Java, Solidity, Spring Boot, Hardhat, AWS (DynamoDB, S3)}
-\def \gamingappItemi{Investigaci\'on de mercado de productos y protocolos Wallets y NFTs}
-\def \gamingappItemii{Dise\~no \& coordinaci\'on de la integraci\'on de los microservicios desarrollados con el resto}
+\def \gamingappPosDetails{Lider del desarrollo de varios microservicios de una aplicaci\'on de gaming: un microservicio en Kotlin y otro en Java, ambos construidos con el framework de Spring Boot.}
+\def \gamingappTechStack{Kotlin (librer\'ias: Arrow), Java, Spring Boot, AWS (DynamoDB, S3)}
+                         % Solidity, Hardhat
+\def \gamingappItemi{Investigaci\'on de mercado de productos y protocolos de Wallets y NFTs}
 
-\def \mantisiiPosition{Tech Leader \& Dev Scala en \href{https://github.com/input-output-hk/mantis}{Proyecto Mantis}}
+\def \mantisiiPosition{Tech Leader \& Dev Scala en el \href{https://github.com/input-output-hk/mantis}{proyecto Mantis}}
 \def \mantisiiDates{Sep 2020 - Ene 2021}
-\def \mantisiiPosDetails{Lider\'e la modernizaci\'on del cliente de Ethereum Classic: una implementaci\'on en Scala modelada con Akka actors.}
-\def \mantisiiTechStack{Scala (librer\'as: Akka, Cats, Monix), NoSQL (RocksDB)}
+\def \mantisiiPosDetails{Lider de la modernizaci\'on del cliente de Ethereum Classic: una implementaci\'on en Scala modelada con Akka actors.}
+\def \mantisiiTechStack{Scala (librer\'ias: Akka, Cats, Monix), NoSQL (RocksDB)}
 \def \mantisiiItemi{Dise\~no \& implementaci\'on de un cambio al protocolo de Ethereum Classic}
 \def \mantisiiItemiDetails{\href{https://ecips.ethereumclassic.org/ECIPs/ecip-1098}{sistema de proto-treasury.}}
 
 \def \cryptoPosition{Capitan de Squad \& Dev Scala}
 \def \cryptoDates{Sep 2018 - Sep 2020; Ene 2021 - Ago 2021}
-\def \cryptoPosDetails{Lidre\'e el desarrollo de un sub-equipo en un proyecto de una nueva criptomoneda, a trav\'es de una aplicaci\'on de Scala modelada en capas e integrada con contratos de Solidity.}
-\def \cryptoTechStack{Scala (librer\'as: Akka, Cats, Monix), Solidity, NoSQL (RocksDB)}
+\def \cryptoPosDetails{Lider de el desarrollo de un squad en un proyecto de una nueva criptomoneda, a trav\'es de una aplicaci\'on de Scala modelada en capas e integrada con contratos de Solidity.}
+\def \cryptoTechStack{Scala (librer\'ias: Akka, Cats, Monix), Solidity, NoSQL (RocksDB)}
 \def \cryptoItemi{Programaci\'on funcional estricta}
 \def \cryptoItemii{Desarrollo orientado a la investigaci\'on}
 \def \cryptoItemiiDetails{en comunicaci\'on cercana con un grupo de investigadores a cargo de la creaci\'on de los cambios al protocolo a ser implementados por el equipo.}
-\def \cryptoItemiii{Dise\~no \& implementaci\'on de proceso de sincronizaci\'on entre los nodos de la criptomoneda}
+\def \cryptoItemiii{Dise\~no \& implementaci\'on del proceso de sincronizaci\'on entre los nodos de la criptomoneda}
 
-\def \yoroiPosition{Dev Haskell en \href{https://github.com/input-output-hk/project-icarus-importer}{Proyecto Yoroi}}
+\def \yoroiPosition{Dev Haskell en el \href{https://github.com/input-output-hk/project-icarus-importer}{proyecto Yoroi}}
 \def \yoroiDates{Ene 2018 - Sep 2018}
-\def \yoroiPosDetails{Desarrollo de una integraci\'on en Haskell con la red de Cardano, exportando los eventos sucedidos en esta a una base de datos SQL. Ayudar con el desarrollo del Backend y Frontend en Javascript, como consumidores de la base de datos.}
+\def \yoroiPosDetails{Desarrollo de una integraci\'on en Haskell con la red de Cardano, exportando los eventos sucedidos en esta a una base de datos SQL. Ayudando con el desarrollo del Backend y Frontend en Javascript, como consumidores de la base de datos.}
 \def \yoroiTechStack{Haskell, SQL}
-\def \yoroiItemi{Dise\~no de la integraci\'on con un nodo de Cardano}
+\def \yoroiItemi{Dise\~no de la integraci\'on con la red de Cardano}
 
-\def \mantisiPosition{Scala Dev at \href{https://github.com/input-output-hk/mantis}{Mantis project}}
+\def \mantisiPosition{Dev Scala en el \href{https://github.com/input-output-hk/mantis}{projecto Mantis}}
 \def \mantisiDates{Dic 2016 - Ene 2018}
-\def \mantisiPosDetails{Desarrollo de un cliente de Ethereum y Ethereum Classic client: una implementaci\'on en Scala modelada con Akka actors.}
+\def \mantisiPosDetails{Desarrollo de un cliente de Ethereum y Ethereum Classic: una implementaci\'on en Scala modelada con Akka actors.}
 \def \mantisiTechStack{Scala (Akka actors), NoSQL (LevelDB and RocksDB)}
 \def \mantisiItemi{Red compatible con Ethereum y Ethereum Classic}
 \def \mantisiItemiDetails{basando la implementaci\'on en otras existentes y en el paper de Ethereum.}
 \def \mantisiItemii{Proyecto Open Source}
-\def \mantisiItemiiDetails{con peri\'odicas actualizaciones de estado a la comunidad.}
+\def \mantisiItemiiDetails{con peri\'odicas actualizaciones de su estado a la comunidad.}
 
 % Programming skills section
 \def \secProgrammingSkills{Habilidades de programaci\'on}
