feat: added linkedin link; fixed typo on pdf, from cv-es to cv-en

--- a/cv.tex
+++ b/cv.tex
@@ -15,7 +15,7 @@
 \usepackage{enumitem}
 \usepackage{hyperref}
 \usepackage{fancyhdr}
-\usepackage{fontawesome}
+\usepackage{fontawesome} % Includes logos for github, mail, etc
 
 
 \pagestyle{fancy}
@@ -52,8 +52,8 @@
 
 %----------HEADING-----------------
 \begin{tabular*}{\textwidth}{l@{\extracolsep{\fill}}l}
-  \textbf{\Large Nicol\'as Tallar}  & \faEnvelopeSquare \ \href{mailto:nicolastallar@gmail.com}{nicolastallar@gmail.com} \\
-                                    & \faGithub \ \href{https://github.com/ntallar}{https://github.com/ntallar} \\
+  \textbf{\Large Nicol\'as Tallar}                                                                                                             & \faEnvelopeSquare \ \href{mailto:nicolastallar@gmail.com}{nicolastallar@gmail.com} \\
+  \faLinkedinSquare \ \href{https://www.linkedin.com/in/nicol%C3%A1s-tallar-8872a835/}{https://www.linkedin.com/in/nicol\'as-tallar-8872a835/} & \faGithub \ \href{https://github.com/ntallar}{https://github.com/ntallar} \\
 \end{tabular*}
 
 
