feat: replace scripts with makefile; refactor further common text; some notes on PeYa experience

--- a/cv.tex
+++ b/cv.tex
@@ -71,6 +71,18 @@
 \section{\secExperience}
   \resumeSubHeadingListStart
 
+    %\resumeSubheadingTitle
+    %  {\pedidosya}{\caba}
+    %  {\pedidosyaPosition}{\pedidosyaDates}
+    %  {\pedidosyaPosDetails}
+    % TODO: complete
+    %  \resumeItemListStart
+    %    \resumeItemTechStack{\marketplaceTechStack}
+    %    \resumeItemWithDetails{\marketplaceItemi}{\marketplaceItemiDetails}
+    %    \resumeItem{\marketplaceItemii}
+    %  \resumeItemListEnd
+
+
     \resumeSubheadingTitle
       {\globant}{\caba}
       {\marketplacePosition}{\marketplaceDates}
