--- a/dicts/common.tex
+++ b/dicts/common.tex
@@ -1,7 +1,25 @@
-% Education section
-\def \uba{Universidad de Buenos Aires}
 \def \caba{CABA, Argentina}
 
+% Education section
+\def \uba{Universidad de Buenos Aires}
+\def \degreeDates{\january \ 2012 -- \august \ 2023}
+
 % Experience section
+%% Companies
+\def \pedidosya{PedidosYa}
 \def \globant{Globant}
 \def \atix{Atix Labs}
+
+%% Dates
+\def \pedidosyaDates{\november \ 2023 - actual}
+\def \marketplaceDates{\march \ 2023 - \november \ 2023}
+\def \aguaDates{\december 2022 - \march \ 2023}
+\def \gamingappDates{\december \ 2021 - \december \ 2022}
+\def \mantisiiDates{\september \ 2020 - \january \ 2021}
+\def \cryptoDates{\september \ 2018 - \september \ 2020; \january \ 2021 - \august \ 2021}
+\def \yoroiDates{\january \ 2018 - \september \ 2018}
+\def \mantisiDates{\december \ 2016 - \january \ 2018}
+
+% Programming skills section
+\def \knownTech{Grafana, NoSQL, SQL, AWS (DynamoDB, S3), Azure (functions, Blob, Queue)}
+     % Spring Boot, NestJS, Hardhat, Docker
