--- a/dicts/english.tex
+++ b/dicts/english.tex
@@ -1,13 +1,29 @@
+% Common
+%% Months
+\def \january{Jan}
+\def \february{Feb}
+\def \march{Mar}
+\def \april{Apr}
+\def \may{May}
+\def \june{Jun}
+\def \july{Jul}
+\def \august{Aug}
+\def \september{Sep}
+\def \october{Oct}
+\def \november{Nov}
+\def \december{Dec}
+
 % Education section
 \def \secEducation{Education}
 \def \degree{BS+Master in Computer Science;  GPA: 9.36}
-\def \degreeDates{Jan. 2012 -- Aug. 2023}
 
 % Experience section
 \def \secExperience{Experience}
 
+\def \pedidosyaPosition{Dev Go}
+\def \pedidosyaPosDetails{TODO}
+
 \def \marketplacePosition{Tech Leader \& Typescript Dev}
-\def \marketplaceDates{Mar 2023 - now}
 \def \marketplacePosDetails{Led development of various services for a marketplace application}
 \def \marketplaceTechStack{Typescript, NestJS, Azure, SQL}
 \def \marketplaceItemi{Extensive integration to the Azure ecosystem}
@@ -15,25 +31,21 @@
 \def \marketplaceItemii{Design \& coordination for the integration of all services of the application}
 
 \def \aguaPosition{Tech Leader \& Solidity Dev at \href{https://gitlab.com/atixlabs-oss/agua}{Agua project}}
-\def \aguaDates{Dec 2022 - Mar 2023}
 \def \aguaTechStack{Solidity, Javascript, Hardhat, OpenZeppelin}
 
 \def \gamingappPosition{Tech Leader \& Kotlin Dev}
-\def \gamingappDates{Dec 2021 - Dec 2022}
 \def \gamingappPosDetails{Led development of various microservices for a gaming application: a Kotlin and a Java microservice, both built on the Spring Boot framework.}
 \def \gamingappTechStack{Kotlin (libraries: Arrow), Java, Spring Boot, AWS (DynamoDB, S3)}
                          % Solidity, Hardhat
 \def \gamingappItemi{Market Research of Wallet and NFT products and protocols}
 
 \def \mantisiiPosition{Tech Leader \& Scala Dev at \href{https://github.com/input-output-hk/mantis}{Mantis project}}
-\def \mantisiiDates{Sep 2020 - Jan 2021}
 \def \mantisiiPosDetails{Led modernization of a Ethereum Classic client: a Scala protocol implementation modeled with Akka actors.}
 \def \mantisiiTechStack{Scala (libraries: Akka, Cats, Monix), NoSQL (RocksDB)}
 \def \mantisiiItemi{Design \& implementation of a protocol change to Ethereum Classic}
 \def \mantisiiItemiDetails{\href{https://ecips.ethereumclassic.org/ECIPs/ecip-1098}{a proto-treasury system.}}
 
 \def \cryptoPosition{Squad Captain \& Scala Dev}
-\def \cryptoDates{Sep 2018 - Sep 2020; Jan 2021 - Aug 2021}
 \def \cryptoPosDetails{Led development of a subteam for a project implementing a new cryptocurrency, through a layered Scala application integrated to Solidity contracts.}
 \def \cryptoTechStack{Scala (libraries: Akka, Cats, Monix), Solidity, NoSQL (RocksDB)}
 \def \cryptoItemi{Strict functional programming}
@@ -42,13 +54,11 @@
 \def \cryptoItemiii{Design \& implementation of the synchronization process between nodes of the cryptocurrency}
 
 \def \yoroiPosition{Haskell Dev at \href{https://github.com/input-output-hk/project-icarus-importer}{Yoroi project}}
-\def \yoroiDates{Jan 2018 - Sep 2018}
 \def \yoroiPosDetails{Developed a Haskell integration to the Cardano Blockchain, that exposed events happing on it by exporting them to a SQL database. Helped with the Javascript Backend and Frontend as consumers of the produced database.}
 \def \yoroiTechStack{Haskell, SQL}
 \def \yoroiItemi{Designed integration with Cardano network}
 
 \def \mantisiPosition{Scala Dev at \href{https://github.com/input-output-hk/mantis}{Mantis project}}
-\def \mantisiDates{Dec 2016 - Jan 2018}
 \def \mantisiPosDetails{Developed a Ethereum and Ethereum Classic client: a Scala protocol implementation modeled with Akka actors.}
 \def \mantisiTechStack{Scala (Akka actors), NoSQL (LevelDB and RocksDB)}
 \def \mantisiItemi{Network Compatible with Ethereum and Ethereum Classic}
@@ -59,11 +69,9 @@
 % Programming skills section
 \def \secProgrammingSkills{Programming Skills}
 \def \subsecProgrammingLang{Languages}
-\def \programmingLang{Scala (w/libraries: Akka, Cats, Monix), Kotlin (w/libraries: Arrow), Typescript, Haskell}
-     % Solidity
-\def \subsecKnownTech{Technologies}
-\def \knownTech{Spring Boot, NestJS, NoSQL, SQL, AWS (DynamoDB, S3), Azure (functions, Blob, Queue)}
-     % Hardhat, Docker
+\def \programmingLang{Go, Scala (w/libraries: Akka, Cats, Monix)}
+     % Kotlin (w/libraries: Arrow), Solidity, Haskell, Typescript 
+\def \subsecKnownTech{Technologies} % def in common
 
 % Projects and courses section
 \def \secProjAndcCurses{Projects \& Courses}
