--- a/dicts/spanish.tex
+++ b/dicts/spanish.tex
@@ -1,13 +1,29 @@
+% Common
+%% Months
+\def \january{Ene}
+\def \february{Feb}
+\def \march{Mar}
+\def \april{Abr}
+\def \may{May}
+\def \june{Jun}
+\def \july{Jul}
+\def \august{Ago}
+\def \september{Sep}
+\def \october{Oct}
+\def \november{Nov}
+\def \december{Dic}
+
 % Education section
 \def \secEducation{Educaci\'on}
 \def \degree{Lic. en Ciencias de la Computaci\'on;  Promedio: 9.36}
-\def \degreeDates{Ene. 2012 -- Ago. 2023}
 
 % Experience section
 \def \secExperience{Experiencia}
 
+\def \pedidosyaPosition{Dev Go}
+\def \pedidosyaPosDetails{TODO}
+
 \def \marketplacePosition{Tech Leader \& Backend Dev Typescript}
-\def \marketplaceDates{Mar 2023 - actual}
 \def \marketplacePosDetails{Lider del desarrollo de varios servicios para una aplicaci\'on de marketplace}
 \def \marketplaceTechStack{Typescript, NestJS, Azure, SQL}
 \def \marketplaceItemi{Integraci\'on extensiva con el ecosistema de Azure}
@@ -15,25 +31,21 @@
 \def \marketplaceItemii{Dise\~no \& coordinaci\'on de la integraci\'on entre todos los servicios de la aplicaci\'on}
 
 \def \aguaPosition{Tech Leader \& Dev Solidity en el \href{https://gitlab.com/atixlabs-oss/agua}{proyecto Agua}}
-\def \aguaDates{Dic 2022 - Mar 2023}
 \def \aguaTechStack{Solidity, Javascript, Hardhat, OpenZeppelin}
 
 \def \gamingappPosition{Tech Leader \& Backend Dev Kotlin}
-\def \gamingappDates{Dic 2021 - Dic 2022}
 \def \gamingappPosDetails{Lider del desarrollo de varios microservicios de una aplicaci\'on de gaming: un microservicio en Kotlin y otro en Java, ambos construidos con el framework de Spring Boot.}
 \def \gamingappTechStack{Kotlin (librer\'ias: Arrow), Java, Spring Boot, AWS (DynamoDB, S3)}
                          % Solidity, Hardhat
 \def \gamingappItemi{Investigaci\'on de mercado de productos y protocolos de Wallets y NFTs}
 
 \def \mantisiiPosition{Tech Leader \& Dev Scala en el \href{https://github.com/input-output-hk/mantis}{proyecto Mantis}}
-\def \mantisiiDates{Sep 2020 - Ene 2021}
 \def \mantisiiPosDetails{Lider de la modernizaci\'on del cliente de Ethereum Classic: una implementaci\'on en Scala modelada con Akka actors.}
 \def \mantisiiTechStack{Scala (librer\'ias: Akka, Cats, Monix), NoSQL (RocksDB)}
 \def \mantisiiItemi{Dise\~no \& implementaci\'on de un cambio al protocolo de Ethereum Classic}
 \def \mantisiiItemiDetails{\href{https://ecips.ethereumclassic.org/ECIPs/ecip-1098}{sistema de proto-treasury.}}
 
 \def \cryptoPosition{Capitan de Squad \& Dev Scala}
-\def \cryptoDates{Sep 2018 - Sep 2020; Ene 2021 - Ago 2021}
 \def \cryptoPosDetails{Lider de el desarrollo de un squad en un proyecto de una nueva criptomoneda, a trav\'es de una aplicaci\'on de Scala modelada en capas e integrada con contratos de Solidity.}
 \def \cryptoTechStack{Scala (librer\'ias: Akka, Cats, Monix), Solidity, NoSQL (RocksDB)}
 \def \cryptoItemi{Programaci\'on funcional estricta}
@@ -42,13 +54,11 @@
 \def \cryptoItemiii{Dise\~no \& implementaci\'on del proceso de sincronizaci\'on entre los nodos de la criptomoneda}
 
 \def \yoroiPosition{Dev Haskell en el \href{https://github.com/input-output-hk/project-icarus-importer}{proyecto Yoroi}}
-\def \yoroiDates{Ene 2018 - Sep 2018}
 \def \yoroiPosDetails{Desarrollo de una integraci\'on en Haskell con la red de Cardano, exportando los eventos sucedidos en esta a una base de datos SQL. Ayudando con el desarrollo del Backend y Frontend en Javascript, como consumidores de la base de datos.}
 \def \yoroiTechStack{Haskell, SQL}
 \def \yoroiItemi{Dise\~no de la integraci\'on con la red de Cardano}
 
 \def \mantisiPosition{Dev Scala en el \href{https://github.com/input-output-hk/mantis}{projecto Mantis}}
-\def \mantisiDates{Dic 2016 - Ene 2018}
 \def \mantisiPosDetails{Desarrollo de un cliente de Ethereum y Ethereum Classic: una implementaci\'on en Scala modelada con Akka actors.}
 \def \mantisiTechStack{Scala (Akka actors), NoSQL (LevelDB and RocksDB)}
 \def \mantisiItemi{Red compatible con Ethereum y Ethereum Classic}
@@ -59,11 +69,9 @@
 % Programming skills section
 \def \secProgrammingSkills{Habilidades de programaci\'on}
 \def \subsecProgrammingLang{Lenguajes}
-\def \programmingLang{Scala (c/librer\'ias: Akka, Cats, Monix), Kotlin (c/librer\'ias: Arrow), Typescript, Haskell}
-     % Solidity
-\def \subsecKnownTech{Tecnolog\'ias}
-\def \knownTech{Spring Boot, NestJS, NoSQL, SQL, AWS (DynamoDB, S3), Azure (functions, Blob, Queue)}
-     % Hardhat, Docker
+\def \programmingLang{Go, Scala (c/librer\'ias: Akka, Cats, Monix)}
+     % Kotlin (c/librer\'ias: Arrow), Solidity, Haskell, Typescript 
+\def \subsecKnownTech{Tecnolog\'ias} % def in common
 
 % Projects and courses section
 \def \secProjAndcCurses{Projectos \& Cursos}
