feat: complete PedidosYa working experience

--- a/cv.tex
+++ b/cv.tex
@@ -71,41 +71,24 @@
 \section{\secExperience}
   \resumeSubHeadingListStart
 
-    %\resumeSubheadingTitle
-    %  {\pedidosya}{\caba}
-    %  {\pedidosyaPosition}{\pedidosyaDates}
-    %  {\pedidosyaPosDetails}
-    % TODO: complete
-    %  \resumeItemListStart
-    %    \resumeItemTechStack{\marketplaceTechStack}
-    %    \resumeItemWithDetails{\marketplaceItemi}{\marketplaceItemiDetails}
-    %    \resumeItem{\marketplaceItemii}
-    %  \resumeItemListEnd
-
+    \resumeSubheadingTitle
+      {\pedidosya}{\caba}
+      {\pedidosyaPosition}{\pedidosyaDates}
+      {\pedidosyaPosDetails}
+      \resumeItemListStart
+        \resumeItemTechStack{\pedidosyaTechStack}
+        \resumeItem{\pedidosyaItemi}
+        \resumeItemWithDetails{\pedidosyaItemii}{\pedidosyaItemiiDetails}
+      \resumeItemListEnd
 
     \resumeSubheadingTitle
       {\globant}{\caba}
-      {\marketplacePosition}{\marketplaceDates}
-      {\marketplacePosDetails}
+      {\blockchainClientPosition}{\blockchainClientDates}
+      {\blockchainClientPosDetails}
       \resumeItemListStart
-        \resumeItemTechStack{\marketplaceTechStack}
-        \resumeItemWithDetails{\marketplaceItemi}{\marketplaceItemiDetails}
-        \resumeItem{\marketplaceItemii}
-      \resumeItemListEnd
-
-    \resumeSubheadingSubtitleWithoutDesc
-      {\aguaPosition}{\aguaDates}
-      %{Designed Solidity Smart Contracts, integrating with flows implemented on a NodeJS application.}
-      \resumeItemListStart
-        \resumeItemTechStack{\aguaTechStack}
-      \resumeItemListEnd
-
-    \resumeSubheadingSubtitle
-      {\gamingappPosition}{\gamingappDates}
-      {\gamingappPosDetails}
-      \resumeItemListStart
-        \resumeItemTechStack{\gamingappTechStack}
-        \resumeItem{\gamingappItemi}
+        \resumeItemTechStack{\blockchainClientTechStack}
+        \resumeItemWithDetails{\blockchainClientItemi}{\blockchainClientItemiDetails}
+        \resumeItem{\blockchainClientItemii}
       \resumeItemListEnd
 
     \resumeSubheadingTitle
@@ -124,7 +107,7 @@
         \resumeItemTechStack{\cryptoTechStack}
         \resumeItem{\cryptoItemi}
         \resumeItemWithDetails{\cryptoItemii}{\cryptoItemiiDetails}
-        \resumeItem{\cryptoItemiii}
+        %\resumeItem{\cryptoItemiii}
       \resumeItemListEnd
 
     \resumeSubheadingSubtitle
