--- a/dicts/common.tex
+++ b/dicts/common.tex
@@ -10,11 +10,16 @@
 \def \globant{Globant}
 \def \atix{Atix Labs}
 
-%% Dates
+%% Dates PedidosYa
 \def \pedidosyaDates{\november \ 2023 - actual}
+
+%% Dates Globant
+\def \blockchainClientDates{\december \ 2021 - \november \ 2023}
 \def \marketplaceDates{\march \ 2023 - \november \ 2023}
-\def \aguaDates{\december 2022 - \march \ 2023}
+\def \aguaDates{\december \ 2022 - \march \ 2023}
 \def \gamingappDates{\december \ 2021 - \december \ 2022}
+
+%% Dates AtixLabs
 \def \mantisiiDates{\september \ 2020 - \january \ 2021}
 \def \cryptoDates{\september \ 2018 - \september \ 2020; \january \ 2021 - \august \ 2021}
 \def \yoroiDates{\january \ 2018 - \september \ 2018}
