--- a/dicts/english.tex
+++ b/dicts/english.tex
@@ -20,25 +20,40 @@
 % Experience section
 \def \secExperience{Experience}
 
-\def \pedidosyaPosition{Dev Go}
-\def \pedidosyaPosDetails{TODO}
+%% PedidosYa
+\def \pedidosyaPosition{Senior Dev Go}
+\def \pedidosyaPosDetails{Responsable for the development of iniciatives in various services and gateways of high traffic}
+\def \pedidosyaTechStack{Go, Grafana}
+\def \pedidosyaItemi{Migration from Datadog to Grafana}
+\def \pedidosyaItemii{Complete redesign of the team services}
+\def \pedidosyaItemiiDetails{Including: migration to new infrastructure, comparisons after conversions to verify behavior, support client migration}
 
-\def \marketplacePosition{Tech Leader \& Typescript Dev}
-\def \marketplacePosDetails{Led development of various services for a marketplace application}
-\def \marketplaceTechStack{Typescript, NestJS, Azure, SQL}
-\def \marketplaceItemi{Extensive integration to the Azure ecosystem}
-\def \marketplaceItemiDetails{Blob Storage (using SAS), Queue Storage, Azure functions}
-\def \marketplaceItemii{Design \& coordination for the integration of all services of the application}
+%% Globant
+\def \blockchainClientPosition{Tech Leader}
+\def \blockchainClientPosDetails{Led development of various projects across different programming languages}
+\def \blockchainClientTechStack{Typescript (framework: NestJS), Kotlin (libraries: Arrow, framework: Spring Boot), Java (framework: Spring Boot), Solidity (framework: Hardhat, libraries: OpenZeppelin) Azure, AWS (DynamoDB, S3)}
+\def \blockchainClientItemi{Extensive integration to the Azure ecosystem}
+\def \blockchainClientItemiDetails{Blob Storage (using SAS), Queue Storage, Azure functions}
+\def \blockchainClientItemii{Market Research of Wallet and NFT products and protocols}
 
-\def \aguaPosition{Tech Leader \& Solidity Dev at \href{https://gitlab.com/atixlabs-oss/agua}{Agua project}}
-\def \aguaTechStack{Solidity, Javascript, Hardhat, OpenZeppelin}
+%\def \marketplacePosition{Tech Leader \& Typescript Dev}
+%\def \marketplacePosDetails{Led development of various services for a marketplace application}
+%\def \marketplaceTechStack{Typescript, NestJS, Azure, SQL}
+%\def \marketplaceItemi{Extensive integration to the Azure ecosystem}
+%\def \marketplaceItemiDetails{Blob Storage (using SAS), Queue Storage, Azure functions}
+%\def \marketplaceItemii{Design \& coordination for the integration of all services of the application}
 
-\def \gamingappPosition{Tech Leader \& Kotlin Dev}
-\def \gamingappPosDetails{Led development of various microservices for a gaming application: a Kotlin and a Java microservice, both built on the Spring Boot framework.}
-\def \gamingappTechStack{Kotlin (libraries: Arrow), Java, Spring Boot, AWS (DynamoDB, S3)}
+%\def \aguaPosition{Tech Leader \& Solidity Dev at \href{https://gitlab.com/atixlabs-oss/agua}{Agua project}}
+%\def \aguaTechStack{Solidity, Javascript, Hardhat, OpenZeppelin}
+%\def \aguaItemi{Designed Solidity Smart Contracts, integrating with flows implemented on a NodeJS application}
+
+%\def \gamingappPosition{Tech Leader \& Kotlin Dev}
+%\def \gamingappPosDetails{Led development of various microservices for a gaming application: a Kotlin and a Java microservice, both built on the Spring Boot framework.}
+%\def \gamingappTechStack{Kotlin (libraries: Arrow), Java, Spring Boot, AWS (DynamoDB, S3)}
                          % Solidity, Hardhat
-\def \gamingappItemi{Market Research of Wallet and NFT products and protocols}
+%\def \gamingappItemi{Market Research of Wallet and NFT products and protocols}
 
+%% AtixLabs
 \def \mantisiiPosition{Tech Leader \& Scala Dev at \href{https://github.com/input-output-hk/mantis}{Mantis project}}
 \def \mantisiiPosDetails{Led modernization of a Ethereum Classic client: a Scala protocol implementation modeled with Akka actors.}
 \def \mantisiiTechStack{Scala (libraries: Akka, Cats, Monix), NoSQL (RocksDB)}
