--- a/dicts/spanish.tex
+++ b/dicts/spanish.tex
@@ -20,25 +20,40 @@
 % Experience section
 \def \secExperience{Experiencia}
 
-\def \pedidosyaPosition{Dev Go}
-\def \pedidosyaPosDetails{TODO}
+%% Pedidosya
+\def \pedidosyaPosition{Senior Dev Go}
+\def \pedidosyaPosDetails{Responsable del desarrollo de iniciativas en varios servicios y gateways de alto tr\'afico}
+\def \pedidosyaTechStack{Go, Grafana}
+\def \pedidosyaItemi{Migraci\'on de Datadog a Grafana}
+\def \pedidosyaItemii{Rediseño completo de los servicios del equipo}
+\def \pedidosyaItemiiDetails{Incluyendo: migraci\'on hacia nueva infraestructura, comparaciones despu\'es de conversi\'on para verificar el funcionamiento, soporte a clientes}
 
-\def \marketplacePosition{Tech Leader \& Backend Dev Typescript}
-\def \marketplacePosDetails{Lider del desarrollo de varios servicios para una aplicaci\'on de marketplace}
-\def \marketplaceTechStack{Typescript, NestJS, Azure, SQL}
-\def \marketplaceItemi{Integraci\'on extensiva con el ecosistema de Azure}
-\def \marketplaceItemiDetails{Blob Storage (usando SAS), Queue Storage, Azure functions}
-\def \marketplaceItemii{Dise\~no \& coordinaci\'on de la integraci\'on entre todos los servicios de la aplicaci\'on}
+%% Globant
+\def \blockchainClientPosition{Tech Leader}
+\def \blockchainClientPosDetails{Lider t\'ecnivo en varios projectos de lenguajes de programaci\'on varios}
+\def \blockchainClientTechStack{Typescript (framework: NestJS), Kotlin (librer\'ias: Arrow, framework: Spring Boot), Java (framework: Spring Boot), Solidity (framework: Hardhat, librer\'ias: OpenZeppelin) Azure, AWS (DynamoDB, S3)}
+\def \blockchainClientItemi{Integraci\'on extensiva con el ecosistema de Azure}
+\def \blockchainClientItemiDetails{Blob Storage (usando SAS), Queue Storage, Azure functions}
+\def \blockchainClientItemii{Investigaci\'on de mercado de productos y protocolos de Wallets y NFTs}
 
-\def \aguaPosition{Tech Leader \& Dev Solidity en el \href{https://gitlab.com/atixlabs-oss/agua}{proyecto Agua}}
-\def \aguaTechStack{Solidity, Javascript, Hardhat, OpenZeppelin}
+%\def \marketplacePosition{Tech Leader \& Backend Dev Typescript}
+%\def \marketplacePosDetails{Lider del desarrollo de varios servicios para una aplicaci\'on de marketplace}
+%\def \marketplaceTechStack{Typescript, NestJS, Azure, SQL}
+%\def \marketplaceItemi{Integraci\'on extensiva con el ecosistema de Azure}
+%\def \marketplaceItemiDetails{Blob Storage (usando SAS), Queue Storage, Azure functions}
+%\def \marketplaceItemii{Dise\~no \& coordinaci\'on de la integraci\'on entre todos los servicios de la aplicaci\'on}
 
-\def \gamingappPosition{Tech Leader \& Backend Dev Kotlin}
-\def \gamingappPosDetails{Lider del desarrollo de varios microservicios de una aplicaci\'on de gaming: un microservicio en Kotlin y otro en Java, ambos construidos con el framework de Spring Boot.}
-\def \gamingappTechStack{Kotlin (librer\'ias: Arrow), Java, Spring Boot, AWS (DynamoDB, S3)}
+%\def \aguaPosition{Tech Leader \& Dev Solidity en el \href{https://gitlab.com/atixlabs-oss/agua}{proyecto Agua}}
+%\def \aguaTechStack{Solidity, Javascript, Hardhat, OpenZeppelin}
+%\def \aguaItemi{Diseño de Smart Contracts en Solidity, integrando con flows implementados en una aplicaci\'on NodeJS}
+
+%\def \gamingappPosition{Tech Leader \& Backend Dev Kotlin}
+%\def \gamingappPosDetails{Lider del desarrollo de varios microservicios de una aplicaci\'on de gaming: un microservicio en Kotlin y otro en Java, ambos construidos con el framework de Spring Boot.}
+%\def \gamingappTechStack{Kotlin (librer\'ias: Arrow), Java, Spring Boot, AWS (DynamoDB, S3)}
                          % Solidity, Hardhat
-\def \gamingappItemi{Investigaci\'on de mercado de productos y protocolos de Wallets y NFTs}
+%\def \gamingappItemi{Investigaci\'on de mercado de productos y protocolos de Wallets y NFTs}
 
+%% AtixLabs
 \def \mantisiiPosition{Tech Leader \& Dev Scala en el \href{https://github.com/input-output-hk/mantis}{proyecto Mantis}}
 \def \mantisiiPosDetails{Lider de la modernizaci\'on del cliente de Ethereum Classic: una implementaci\'on en Scala modelada con Akka actors.}
 \def \mantisiiTechStack{Scala (librer\'ias: Akka, Cats, Monix), NoSQL (RocksDB)}
